Add React chat UI + health + reindex endpoints + error handling